--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.4
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
