--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - lib/icons/
   #   - images/a_dot_ham.jpeg
 
 
