--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.3
   cloud_firestore: ^4.1.0
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
