--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.8.6
+  flutter_svg: ^1.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
