--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   percent_indicator: ^4.2.2
   carousel_slider: ^4.1.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
