--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   percent_indicator: ^4.2.2
   carousel_slider: ^4.1.1
   google_fonts: ^3.0.1
+  google_sign_in: '^4.5.1'
 
 dev_dependencies:
   flutter_test:
