--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   carousel_slider: ^4.1.1
   google_fonts: ^3.0.1
   firebase_storage: ^11.0.6
+  google_sign_in: ^4.5.1
 
 dev_dependencies:
   flutter_test:
