--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_fonts: ^3.0.1
   firebase_storage: ^11.0.6
   google_sign_in: ^4.5.1
+  audio_video_progress_bar: ^0.11.0
 
 dev_dependencies:
   flutter_test:
