--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^11.0.6
   google_sign_in: ^4.5.1
   audio_video_progress_bar: ^0.11.0
+  audioplayers: ^1.1.1
 
 dev_dependencies:
   flutter_test:
